@@ -1,4 +1,6 @@
-2011-05-16  Rudi Schlatte  <rudi@constantly.at>
+2011-05-16  Rudolf Schlatte  <rudi@ifi.uio.no>
+
+	* Win9x/*: removed support for old-as-of-1999 versions of gnuplot
 
 	* gnuplot.el (gnuplot-make-gnuplot-buffer): call `make-local-hook'
 	only on xemacs (Emacs 24 doesn't have it)
